tests/stage3/semantic_call_arg_count_zero_extra.err
type error
line: 8
argument count mismatch
expected: 0
got: 1
