tests/stage3/semantic_call_arg_count_zero_extra.imp
module app.main

function ping() -> i32 {
    return 7
}

function main() {
    print(ping(1))
}
